--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,8 +20,11 @@ jobs:
     steps:
     - uses: actions/stale@v5
       with:
+        days-before-issue-stale: 14
+        days-before-issue-close: 7
+        stale-issue-label: "stale"
+        stale-issue-message: "This issue is stale because it has been open for 14 days with no activity."
+        close-issue-message: "This issue was closed because it has been inactive for 7 days since being marked as stale."
+        days-before-pr-stale: -1
+        days-before-pr-close: -1
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
-        stale-issue-label: 'no-issue-activity'
-        stale-pr-label: 'no-pr-activity'
